# aison

./: .buildconfig  .clang-format  .clang-tidy  .gitignore  .gitmodules  .plsconfig  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakeUserPresets.json  README.md  REFERENCE.md  aison_schema_design.md  conanfile.txt  pls
.github/workflows/: ci.yml
archive/: pls_old.py  pls_old2.py
docs/: design.md
example/: feature_encoder.cpp  feature_introspect.cpp  feature_variant.cpp  introspect.cpp  main.cpp  types.cpp  types.h
include/aison/: aison.h
include/aison2/: aison2.h  json_adapter.h  runtime.h
test/: aison2_experiments.cpp  aison2_json_roundtrip.cpp  aison_test.cpp  basic.cpp  basic_types.cpp  runtime_asserts.cpp  runtime_errors.cpp  schema_guards.cpp  schema_with_config.cpp  types_basic.cpp  types_custom.cpp  types_introspect.cpp  types_variant.cpp  utils.cpp  utils.h  variant.cpp
